# pausabater13.github.io

./: .gitignore  gulpfile.js  index.html  package.json  studies.html
.github/workflows/: grocery-opportunities.yml
Your New Format Portfolio _ Format_files/: images-abde584967306550b952158e44d03f0cffbfde03909d77c4952c15d91d591ba4.js  js(1)  new_online_portfolio-de12ecdf1bf0d2b726d67608f87282b064637442e68cd21c56cbaa76476993fb.css  track_abandon-b51bd26c0d3fdfbdf8d418d1242df9a2dc4c2423eeb726df39842f9160223206.js
_includes/: aside.html  call-to-action.html  call-to-action2.html  contact.html  contact2.html  header.html  header2.html  nav.html  nav2.html  services.html  services2.html
_includes/Your New Format Portfolio _ Format_files/: 21149070235.js  analytics.min.js  (+2 more)
_includes/header/: header.html  (+1 more)
_layouts/: front.html  front_experience.html  front_resume.html  front_studies.html
_sass/: _base.scss
antigua/: index.html
css/: bootstrap.css
grocery_opportunities/: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
grocery_opportunities/grocery_opportunities/: __init__.py  config.py  run.py
grocery_opportunities/grocery_opportunities/notion_client/: __init__.py  client.py
grocery_opportunities/grocery_opportunities/opportunities/: __init__.py  engine.py
grocery_opportunities/grocery_opportunities/scraper/: __init__.py  grocery.py
grocery_opportunities/grocery_opportunities/trends/: __init__.py  google_trends.py
grocery_opportunities/scripts/: cron_weekly.sh
projects/: index.html
studies/: index.html  styles.css
(+30 files in other folders)
